Fixed result responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ nav .reset {
 	main {
 		width: 90vw;
 		padding: 0;
+		grid-template-rows: 1fr 35%;
 	}
 
 	.bookmark-shape {
